# sirius2026

./: .gitignore  0_python_basics.ipynb  1_python.ipynb  2_images.ipynb  3_eda.ipynb  README.md  pyproject.toml
