[project]
name = "sirius2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface>=0.0.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pillow>=12.1.0",
    "polars>=1.37.1",
    "torch>=2.9.1",
    "transformers>=4.57.5",
]
